--- a/getting-started.html
+++ b/getting-started.html
@@ -1,6 +1,7 @@
 ---
-layout: article
-title: Page - Aside
-aside:
-  toc: true
+layout: articles
+title: Articles - Brief
+articles:
+  data_source: site.sample_page
+  type: brief
 ---
