Added SEO, Analytics, Comments, Contributions

--- a/assets/ckeditor/index.html
+++ b/assets/ckeditor/index.html
@@ -9,6 +9,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 	<link type="text/css" href="sample/css/sample.css" rel="stylesheet" media="screen" />
 	<title>CKEditor 5 – classic editor build sample</title>
+	{% seo %}
 </head>
 <body>
 
