--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: home
 # articles:
 #   excerpt_type: html
 articles:
-  data_source_1: site.gettingstarted
-  date_source_2: site.sample
-  data_source_3: site.course
-  data_source_4: site.blog
-  data_source_5: site.newsletter
+  gettingstarted: site.gettingstarted
+  samplecode: site.samplecode
+  course: site.course
+  blog: site.blog
+  newsletter: site.newsletter
 ---
