--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 # articles:
 #   excerpt_type: html
-image: ../assets/images/general/general-cover.png
+image: ../../assets/images/general/general-cover.png
 articles:
   gettingstarted: site.gettingstarted
   samplecode: site.samplecode
