--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@ articles:
   course: site.course
   blog: site.blog
   newsletter: site.newsletter
+keywords: piptrends, learn, pip, trends, python
 ---
